--- a/packages/hop-node/Makefile
+++ b/packages/hop-node/Makefile
@@ -1,22 +1,25 @@
-# Login to AWS registry (must have docker running)
-docker-registry-login:
-	$$(aws ecr get-login --no-include-email --region us-east-1 --profile=authereum)
-
 # Build docker target
 docker-build:
 	docker build -f Dockerfile -t hopprotocol/hop-node .
 
+# Tag docker image with latest
+docker-image-tag-latest:
+	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:latest
+
 # Tag docker image
 docker-image-tag:
 	$(eval REV=$(shell git rev-parse HEAD | cut -c1-7))
-	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:latest
+	$(eval BRANCH=$(shell git branch --show-current))
 	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:$(REV)
+	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:$(BRANCH)
 
 # Push to registry
 docker-registry-push:
 	$(eval REV=$(shell git rev-parse HEAD | cut -c1-7))
+	$(eval BRANCH=$(shell git branch --show-current))
 	docker push hopprotocol/hop-node:latest
 	docker push hopprotocol/hop-node:$(REV)
+	docker push hopprotocol/hop-node:$(BRANCH)
 
 # Build docker image and push to AWS registry
 docker-build-and-push: docker-build docker-image-tag docker-registry-push
