--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -34,6 +34,7 @@
     "bip39": "^3.0.3",
     "chalk": "4.1.0",
     "commander": "6.2.0",
+    "console-clear": "^1.1.1",
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
     "ethereumjs-util": "^7.0.9",
@@ -44,6 +45,7 @@
     "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
+    "lolcatjs": "^2.4.0",
     "merkletreejs": "^0.2.13",
     "mkdirp": "^0.5.5",
     "module-alias": "^2.2.2",
