--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@authereum/utils": "^0.1.12",
+    "@hop-protocol/abi": "0.0.1-beta.0",
     "@eth-optimism/watcher": "0.0.1-alpha.9",
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
