--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -22,10 +22,11 @@
   "license": "MIT",
   "dependencies": {
     "@authereum/utils": "^0.1.12",
-    "@hop-protocol/abi": "0.0.1-beta.0",
     "@eth-optimism/watcher": "0.0.1-alpha.9",
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
+    "@hop-protocol/abi": "0.0.1-beta.0",
+    "@maticnetwork/maticjs": "^2.0.38",
     "@types/debounce-promise": "^3.1.3",
     "@types/mkdirp": "^1.0.1",
     "@types/prompt": "^1.1.0",
@@ -56,6 +57,7 @@
     "prompt": "^1.1.0",
     "subleveldown": "^5.0.1",
     "typescript": "^4.0.5",
+    "web3": "^1.3.5",
     "web3-utils": "^1.3.4"
   },
   "devDependencies": {
