--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "@hop-protocol/abi": "0.0.1-beta.0",
+    "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.0",
     "eventemitter3": "^4.0.7"
