--- a/packages/abi/package.json
+++ b/packages/abi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/abi",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1-beta.1",
   "description": "The Hop Protocol Smart Contract ABIs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,7 +47,7 @@
     "concat-md": "^0.3.5",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
-    "lerna-sync-version": "^0.0.4",
+    "lerna-sync-version": "0.0.5",
     "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
     "standard": "^12.0.1",
