--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@ethersproject/address": "5.0.8",
-    "@hop-protocol/sdk": "0.0.1-beta.5",
-    "@hop-protocol/abi": "0.0.1-beta.0",
+    "@hop-protocol/sdk": "0.0.1-beta.6",
+    "@hop-protocol/abi": "0.0.1-beta.1",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "ipfs-deploy": "8.0.1",
+    "lerna-sync-version": "0.0.5",
     "prettier-standard": "16.4.1"
   }
 }
