--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -25,8 +25,9 @@
     "@eth-optimism/watcher": "0.0.1-alpha.9",
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
-    "@hop-protocol/abi": "0.0.1-beta.0",
+    "@hop-protocol/abi": "0.0.1-beta.1",
     "@maticnetwork/maticjs": "^2.0.38",
+    "@slack/web-api": "^6.1.0",
     "@types/debounce-promise": "^3.1.3",
     "@types/mkdirp": "^1.0.1",
     "@types/prompt": "^1.1.0",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
+    "lerna-sync-version": "0.0.5",
     "prettier-standard": "^16.4.1",
     "ts-jest": "^26.5.2"
   },
