--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.5",
+  "version": "0.0.1-beta.6",
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,7 +32,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@hop-protocol/abi": "0.0.1-beta.0",
+    "@hop-protocol/abi": "0.0.1-beta.1",
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.0",
@@ -56,7 +56,7 @@
     "browserify": "^16.5.0",
     "concat-md": "^0.3.5",
     "jest": "^26.6.3",
-    "lerna-sync-version": "^0.0.4",
+    "lerna-sync-version": "0.0.5",
     "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
     "standard": "^12.0.1",
