--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -36,7 +36,8 @@
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.0",
-    "eventemitter3": "^4.0.7"
+    "eventemitter3": "^4.0.7",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -56,7 +57,7 @@
     "browserify": "^16.5.0",
     "concat-md": "^0.3.5",
     "jest": "^26.6.3",
-    "lerna-sync-version": "0.0.5",
+    "lerna-sync-version": "0.0.6",
     "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
     "standard": "^12.0.1",
