--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,7 @@
     "@ethersproject/address": "5.0.8",
     "@hop-protocol/sdk": "0.0.1-beta.6",
     "@hop-protocol/abi": "0.0.1-beta.1",
+    "@hop-protocol/addresses": "0.0.1-beta.0",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
@@ -43,7 +44,7 @@
     "start": "react-scripts start",
     "dev": "BROWSER=none npm start",
     "lint": "prettier-standard --format",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "netlify deploy --prod",
