--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -26,6 +26,7 @@
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
     "@hop-protocol/abi": "0.0.1-beta.1",
+    "@hop-protocol/addresses": "0.0.1-beta.0",
     "@maticnetwork/maticjs": "^2.0.38",
     "@slack/web-api": "^6.1.0",
     "@types/debounce-promise": "^3.1.3",
