--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -31,6 +31,7 @@
     "@slack/web-api": "^6.1.0",
     "@types/debounce-promise": "^3.1.3",
     "@types/mkdirp": "^1.0.1",
+    "@types/node-fetch": "^2.5.10",
     "@types/prompt": "^1.1.0",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
