--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -29,6 +29,7 @@
     "@maticnetwork/maticjs": "^2.0.38",
     "@slack/web-api": "^6.1.0",
     "@types/debounce-promise": "^3.1.3",
+    "@types/lodash": "^4.14.168",
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
     "@types/prompt": "^1.1.0",
