frontend: Remove noUnusedLocals option

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noImplicitAny": false,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noEmit": true,
     "jsx": "react",
     "baseUrl": "."
