Create metadata subpackage

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@ethersproject/address": "5.0.8",
-    "@hop-protocol/sdk": "0.0.1-beta.13",
     "@hop-protocol/abi": "0.0.1-beta.1",
     "@hop-protocol/addresses": "0.0.1-beta.4",
+    "@hop-protocol/metadata": "0.0.1-beta.0",
+    "@hop-protocol/sdk": "0.0.1-beta.13",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
@@ -25,6 +26,7 @@
     "classnames": "2.2.6",
     "clsx": "1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
     "ethers": "^5.1.0",
     "gridplus-sdk": "0.6.1",
