--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.13",
-  "description": "The Hop Protocol JavaScript SDK",
+  "name": "@hop-protocol/metadata",
+  "version": "0.0.1-beta.0",
+  "description": "Hop Protocol metadata",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,37 +9,26 @@
     "dev": "npm run version && tsc --watch",
     "build": "npm run version && npm run build:ts",
     "build:ts": "tsc",
-    "build:browser": "browserify -t [ babelify --presets [ @babel/preset-env ] ] dist/index.js | uglifyjs > hop.js",
     "clean": "rimraf dist",
-    "clean:docs": "rimraf docs",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
     "lint": "prettier-standard --format",
     "publish:latest": "npm publish --tag latest --access public",
     "publish:beta": "npm publish --tag beta --access public",
     "publish:next": "npm publish --tag next --access public",
-    "dist-tag:latest": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" latest",
-    "dist-tag:beta": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" beta",
-    "dist-tag:next": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" next",
+    "dist-tag:latest": "npm dist-tag add \"@hop-protocol/metadata@$(jq -r .version <package.json)\" latest",
+    "dist-tag:beta": "npm dist-tag add \"@hop-protocol/metadata@$(jq -r .version <package.json)\" beta",
+    "dist-tag:next": "npm dist-tag add \"@hop-protocol/metadata@$(jq -r .version <package.json)\" next",
     "sync-version": "lerna-sync-version",
     "release": "npm run clean && npm test && npm run publish-module && npm run dist-tag:next",
     "release-dist": "npm run release && npm run dist-tag:latest",
     "bump-release": "npm run sync-version && npm run release",
-    "prepare": "npm run lint && npm run build",
-    "docs": "npm run clean:docs && typedoc --plugin typedoc-plugin-markdown --theme markdown --hideGenerator --excludeExternals --excludePrivate --disableSources --hideBreadcrumbs --namedAnchors --out docs src/index.ts && concat-md --toc --decrease-title-levels --dir-name-as-title docs > docs/README.md",
-    "docs:update-gitbook": "./scripts/update_gitbook.sh"
+    "prepare": "npm run lint && npm run build"
   },
   "directories": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@hop-protocol/abi": "0.0.1-beta.1",
-    "@hop-protocol/addresses": "0.0.1-beta.4",
-    "@hop-protocol/metadata": "0.0.1-beta.0",
-    "@maticnetwork/maticjs": "^2.0.38",
-    "dotenv": "^8.2.0",
-    "ethers": "^5.1.0",
-    "eventemitter3": "^4.0.7",
-    "web3": "^1.3.5"
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -58,6 +47,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "concat-md": "^0.3.5",
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "lerna-sync-version": "0.0.6",
     "prettier-standard": "^16.4.1",
@@ -65,8 +55,6 @@
     "standard": "^12.0.1",
     "ts-jest": "^26.5.4",
     "tsify": "^4.0.1",
-    "typedoc": "^0.20.35",
-    "typedoc-plugin-markdown": "^3.6.1",
     "typescript": "^4.2.3",
     "uglify-es": "^3.3.9"
   },
