--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
             apk update
             apk upgrade
             apk add --no-cache curl
-            apk add --no-cache \
-              py-pip=9.0.0-r1
+            apk add --no-cache jq
+            apk add --no-cache py-pip=9.0.0-r1
             pip install \
               docker-compose==1.12.0 \
               awscli==1.11.76
