--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -36,8 +36,10 @@
     "@hop-protocol/addresses": "0.0.1-beta.3",
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
+    "ethereum-checksum-address": "0.0.6",
     "ethers": "^5.1.0",
     "eventemitter3": "^4.0.7",
+    "snake-case": "^3.0.4",
     "web3": "^1.3.5"
   },
   "devDependencies": {
