hop-node: Change networks -> chains in config file

--- a/packages/hop-node/example/config.json
+++ b/packages/hop-node/example/config.json
@@ -1,6 +1,6 @@
 {
   "network": "kovan",
-  "networks": {
+  "chains": {
     "ethereum": {
       "rpcUrl": "https://kovan.rpc.hop.exchange"
     },
