--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -30,6 +30,7 @@
     "@maticnetwork/maticjs": "^2.0.38",
     "@slack/web-api": "^6.1.0",
     "@types/debounce-promise": "^3.1.3",
+    "@types/js-yaml": "^4.0.1",
     "@types/lodash": "^4.14.168",
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
@@ -47,6 +48,7 @@
     "ethers": "^5.1.0",
     "expect": "^26.6.2",
     "fast-memoize": "^2.5.2",
+    "js-yaml": "^4.1.0",
     "keythereum": "^1.0.4",
     "level": "^6.0.1",
     "level-sublevel": "^6.6.5",
