--- a/packages/metadata/tsconfig.json
+++ b/packages/metadata/tsconfig.json
@@ -11,8 +11,8 @@
     "declarationMap": true,
     "skipLibCheck": true,
     "target": "es2015",
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "moduleResolution": "node",
     "sourceMap": false,
     "outDir": "dist",
