--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@hop-protocol/abi": "0.0.1-beta.2",
     "@hop-protocol/addresses": "0.0.1-beta.5",
+    "@hop-protocol/networks": "0.0.1-beta.1",
     "@hop-protocol/metadata": "0.0.1-beta.0",
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
