--- a/packages/networks/package.json
+++ b/packages/networks/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@hop-protocol/metadata": "0.0.1-beta.1",
     "deepmerge": "^4.2.2"
   },
   "devDependencies": {
