--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,7 +38,6 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "to-hex": "0.0.15",
-    "typescript": "3.9.5",
     "web-vitals": "0.2.4",
     "web3-utils": "1.3.4"
   },
@@ -73,8 +72,8 @@
   },
   "devDependencies": {
     "@aws-sdk/client-route-53": "3.4.1",
-    "@typescript-eslint/eslint-plugin": "4.9.1",
-    "@typescript-eslint/parser": "4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.9.1",
     "eslint": "7.15.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -83,6 +82,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "ipfs-deploy": "8.0.1",
     "lerna-sync-version": "0.0.5",
-    "prettier-standard": "16.4.1"
+    "prettier-standard": "^16.4.1",
+    "typescript": "^4.2.4"
   }
 }
