frontend: Use eslint linter

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,7 +36,7 @@
     "react-dom": "16.8.0",
     "react-feather": "2.0.9",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "to-hex": "0.0.15",
     "web-vitals": "0.2.4",
     "web3-utils": "1.3.4"
@@ -44,7 +44,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "BROWSER=none npm start",
-    "lint": "prettier-standard --format",
+    "lint": "npx eslint --fix \"**/*.{ts,tsx}\"",
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -72,14 +72,16 @@
   },
   "devDependencies": {
     "@aws-sdk/client-route-53": "3.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "7.15.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "ipfs-deploy": "8.0.1",
     "lerna-sync-version": "0.0.5",
     "prettier-standard": "^16.4.1",
