--- a/packages/networks/package.json
+++ b/packages/networks/package.json
@@ -11,6 +11,7 @@
     "build:ts": "tsc",
     "clean": "rimraf dist",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
+    "version:bump": "npm version prerelease --preid=beta",
     "lint": "prettier-standard --format",
     "publish:latest": "npm publish --tag latest --access public",
     "publish:beta": "npm publish --tag beta --access public",
@@ -18,10 +19,9 @@
     "dist-tag:latest": "npm dist-tag add \"@hop-protocol/networks@$(jq -r .version <package.json)\" latest",
     "dist-tag:beta": "npm dist-tag add \"@hop-protocol/networks@$(jq -r .version <package.json)\" beta",
     "dist-tag:next": "npm dist-tag add \"@hop-protocol/networks@$(jq -r .version <package.json)\" next",
-    "sync-version": "lerna-sync-version",
-    "release": "npm run clean && npm test && npm run publish-module && npm run dist-tag:next",
-    "release-dist": "npm run release && npm run dist-tag:latest",
-    "bump-release": "npm run sync-version && npm run release",
+    "lerna:sync": "lerna-sync-version",
+    "release": "npm run clean && npm test && npm run publish:latest",
+    "bump-release": "npm run version:bump && npm run lerna:sync && npm run release",
     "prepare": "npm run lint && npm run build"
   },
   "directories": {},
