--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.18",
+  "version": "0.0.1-beta.19",
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,16 +14,16 @@
     "clean:docs": "rimraf docs",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
     "lint": "prettier-standard --format",
+    "version:bump": "npm version prerelease --preid=beta",
     "publish:latest": "npm publish --tag latest --access public",
     "publish:beta": "npm publish --tag beta --access public",
     "publish:next": "npm publish --tag next --access public",
     "dist-tag:latest": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" latest",
     "dist-tag:beta": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" beta",
     "dist-tag:next": "npm dist-tag add \"@hop-protocol/sdk@$(jq -r .version <package.json)\" next",
-    "sync-version": "lerna-sync-version",
-    "release": "npm run clean && npm test && npm run publish-module && npm run dist-tag:next",
-    "release-dist": "npm run release && npm run dist-tag:latest",
-    "bump-release": "npm run sync-version && npm run release",
+    "lerna:sync": "lerna-sync-version",
+    "release": "npm run clean && npm test && npm run publish:latest",
+    "bump-release": "npm run version:bump && npm run lerna:sync && npm run release",
     "prepare": "npm run lint && npm run build",
     "docs": "npm run clean:docs && typedoc --plugin typedoc-plugin-markdown --theme markdown --hideGenerator --excludeExternals --excludePrivate --disableSources --hideBreadcrumbs --namedAnchors --out docs src/index.ts && concat-md --toc --decrease-title-levels --dir-name-as-title docs > docs/README.md",
     "docs:update-gitbook": "./scripts/update_gitbook.sh"
@@ -33,7 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "@hop-protocol/abi": "0.0.1-beta.3",
-    "@hop-protocol/addresses": "0.0.1-beta.6",
+    "@hop-protocol/addresses": "0.0.1-beta.7",
     "@hop-protocol/networks": "0.0.1-beta.2",
     "@hop-protocol/metadata": "0.0.1-beta.2",
     "@maticnetwork/maticjs": "^2.0.38",
