--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -33,6 +33,7 @@
     "@types/debounce-promise": "^3.1.3",
     "@types/js-yaml": "^4.0.1",
     "@types/lodash": "^4.14.168",
+    "@types/luxon": "^1.26.5",
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
     "@types/prompt": "^1.1.0",
@@ -57,6 +58,7 @@
     "levelup": "^4.4.0",
     "lodash": "^4.17.21",
     "lolcatjs": "^2.4.0",
+    "luxon": "^1.27.0",
     "merkletreejs": "^0.2.13",
     "mkdirp": "^0.5.5",
     "module-alias": "^2.2.2",
