frontend: Add netlify redirect header

--- a/packages/frontend/netlify.toml
+++ b/packages/frontend/netlify.toml
@@ -1,7 +1,9 @@
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "https://kovan.hop.exchange"
   status = 200
+  force = true
+  headers = {X-From = "Netlify"}
 
 [[headers]]
   for = "/*"
