frontend: Fix netlify redirect

--- a/packages/frontend/netlify.toml
+++ b/packages/frontend/netlify.toml
@@ -1,9 +1,9 @@
 [[redirects]]
-  from = "/*"
+  from = "/"
   to = "https://kovan.hop.exchange"
-  status = 200
-  force = true
-  headers = {X-From = "Netlify"}
+  status = 301
+  force = false
+  query = {path = ":path"}
 
 [[headers]]
   for = "/*"
