--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.30",
+  "version": "0.0.1-beta.31",
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,13 +34,14 @@
   "dependencies": {
     "@hop-protocol/abi": "0.0.1-beta.6",
     "@hop-protocol/addresses": "0.0.1-beta.18",
-    "@hop-protocol/networks": "0.0.1-beta.3",
     "@hop-protocol/metadata": "0.0.1-beta.3",
+    "@hop-protocol/networks": "0.0.1-beta.3",
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
     "ethereum-checksum-address": "0.0.6",
     "ethers": "^5.1.0",
     "eventemitter3": "^4.0.7",
+    "node-fetch": "2.6.1",
     "snake-case": "^3.0.4",
     "web3": "^1.3.5"
   },
@@ -55,6 +56,7 @@
     "@babel/runtime": "^7.7.2",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.11.7",
+    "@types/node-fetch": "2.5.10",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^2.31.0",
     "aliasify": "^2.1.0",
