--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -41,6 +41,7 @@
     "ethereum-checksum-address": "0.0.6",
     "ethers": "^5.1.0",
     "eventemitter3": "^4.0.7",
+    "fast-memoize": "^2.5.2",
     "node-fetch": "2.6.1",
     "snake-case": "^3.0.4",
     "web3": "^1.3.5"
