--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest test",
-    "dev": "npm run version && npm run copy-assets && tsc --watch",
-    "build": "npm run version && npm run copy-assets && npm run build:ts",
+    "dev": "npm run version && tsc --watch",
+    "build": "npm run version && npm run build:ts",
     "build:ts": "tsc",
     "clean": "rimraf dist",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
@@ -22,8 +22,7 @@
     "lerna:sync": "lerna-sync-version",
     "release": "npm run clean && npm test && npm run publish:latest",
     "bump-release": "npm run version:bump && npm run lerna:sync && npm run release",
-    "prepare": "npm run lint && npm run build",
-    "copy-assets": "copyfiles -u 1 src/assets/* dist/"
+    "prepare": "npm run lint && npm run build"
   },
   "directories": {},
   "author": "",
