--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -37,6 +37,7 @@
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
     "@types/prompt": "^1.1.0",
+    "@types/rimraf": "^3.0.0",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
     "async-mutex": "^0.3.1",
@@ -66,6 +67,7 @@
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
     "prompt": "^1.1.0",
+    "rimraf": "^3.0.2",
     "subleveldown": "^5.0.1",
     "typescript": "^4.0.5",
     "web3": "^1.3.5",
