--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -63,6 +63,7 @@
     "lolcatjs": "^2.4.0",
     "luxon": "^1.27.0",
     "merkletreejs": "^0.2.18",
+    "minimist": "^1.2.5",
     "mkdirp": "^0.5.5",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
