--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -10,7 +10,7 @@
     "start": "node .",
     "dev": "tsc --watch",
     "build": "tsc",
-    "lint": "prettier-standard --format",
+    "lint": "eslint --fix \"src/**/*\" \"test/**/*\"",
     "clean": "rm -rf dist",
     "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
     "clean:db": "rm -rf db_data"
@@ -72,16 +72,25 @@
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
     "subleveldown": "^5.0.1",
-    "typescript": "^4.0.5",
     "web3": "^1.3.5",
     "web3-utils": "^1.3.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-unused-imports": "^1.1.2",
     "jest": "^26.6.3",
     "lerna-sync-version": "0.0.6",
-    "prettier-standard": "^16.4.1",
-    "ts-jest": "^26.5.2"
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.3.5"
   },
   "_moduleAliases": {
     "src": "src"
