--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/level": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
