hop-node: circleci; docker tag latest

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             docker tag app $DOCKER_IMAGE:$BRANCH
             docker push $DOCKER_IMAGE:$CIRCLE_SHA1
             docker push $DOCKER_IMAGE:$BRANCH
-            test $BRANCH == mainnet && docker push $DOCKER_IMAGE:latest
+            test $BRANCH == mainnet && docker tag app $DOCKER_IMAGE:latest && docker push $DOCKER_IMAGE:latest
       - slack/notify:
           event: fail
           template: basic_fail_1
