--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -55,7 +55,7 @@
     "expect": "^26.6.2",
     "fast-memoize": "^2.5.2",
     "js-yaml": "^4.1.0",
-    "keythereum": "^1.0.4",
+    "keythereum": "1.2.0",
     "level": "^6.0.1",
     "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
