--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -37,10 +37,13 @@
     "@hop-protocol/metadata": "0.0.1-beta.14",
     "@hop-protocol/networks": "0.0.1-beta.16",
     "@maticnetwork/maticjs": "^2.0.38",
+    "@types/luxon": "^1.27.1",
     "dotenv": "^8.2.0",
+    "ethereum-block-by-date": "^1.4.0",
     "ethereum-checksum-address": "0.0.6",
     "eventemitter3": "^4.0.7",
     "fast-memoize": "^2.5.2",
+    "luxon": "^2.0.1",
     "node-fetch": "2.6.1",
     "snake-case": "^3.0.4",
     "web3": "^1.3.5"
