--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -25,6 +25,6 @@
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["node", "./node_modules/@types", "./@types"]
   },
-  "include": ["src"],
+  "include": ["src", "@types"],
   "exclude": ["node_modules", "dist", "test", "**/*.test.ts"]
 }
