--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -51,6 +51,9 @@
     "@types/rimraf": "^3.0.0",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
+    "@uniswap/sdk-core": "^3.0.0",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-sdk": "^3.2.1",
     "async-mutex": "^0.3.1",
     "autobind-decorator": "^2.4.0",
     "aws-sdk": "^2.937.0",
