--- a/packages/addresses/package.json
+++ b/packages/addresses/package.json
@@ -22,7 +22,8 @@
     "lerna:sync": "lerna-sync-version",
     "release": "npm run clean && npm test && npm run publish:latest",
     "bump-release": "npm run version:bump && npm run lerna:sync && npm run release",
-    "prepare": "npm run lint && npm run build"
+    "prepare": "npm run lint && npm run build",
+    "json:mainnet": "node -e \"console.log(JSON.stringify(require('.').mainnet, null, 2))\" -> build/mainnet.json"
   },
   "directories": {},
   "author": "",
