--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -50,6 +50,7 @@
     "@types/prompt": "^1.1.0",
     "@types/rimraf": "^3.0.0",
     "@types/subleveldown": "^4.1.0",
+    "@types/uuid": "^8.3.1",
     "@types/yargs": "^15.0.10",
     "@uniswap/sdk-core": "^3.0.0",
     "@uniswap/v3-core": "^1.0.0",
@@ -86,6 +87,7 @@
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
     "subleveldown": "^5.0.1",
+    "uuid": "^8.3.2",
     "web3": "^1.3.5",
     "web3-utils": "^1.3.4"
   },
