--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.90",
+  "version": "0.0.1-beta.91",
   "description": "The Hop Protocol JavaScript SDK",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "jest test",
     "dev": "npm run version && tsc --watch",
