--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.91",
+  "version": "0.0.1-beta.92",
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -34,14 +34,15 @@
   "dependencies": {
     "@hop-protocol/core": "0.0.1-beta.3",
     "@maticnetwork/maticjs": "^2.0.38",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/luxon": "^1.27.1",
     "dotenv": "^8.2.0",
     "ethereum-block-by-date": "^1.4.0",
     "ethereum-checksum-address": "0.0.6",
     "eventemitter3": "^4.0.7",
     "fast-memoize": "^2.5.2",
+    "isomorphic-fetch": "^3.0.0",
     "luxon": "^2.0.1",
-    "node-fetch": "2.6.1",
     "snake-case": "^3.0.4",
     "web3": "^1.3.5"
   },
