--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/sdk",
-  "version": "0.0.1-beta.128",
+  "version": "0.0.1-beta.129",
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -32,6 +32,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ethersproject/abi": "^5.4.0",
     "@hop-protocol/core": "0.0.1-beta.16",
     "@maticnetwork/maticjs": "^2.0.38",
     "@types/isomorphic-fetch": "0.0.35",
