--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -68,6 +68,7 @@
     "cross-env": "^7.0.3",
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
+    "ethereum-block-by-date": "^1.4.2",
     "ethereumjs-util": "^7.0.9",
     "ethers": "5.4.5",
     "expect": "^26.6.2",
@@ -80,7 +81,7 @@
     "levelup": "^4.4.0",
     "lodash": "^4.17.21",
     "lolcatjs": "^2.4.0",
-    "luxon": "^1.27.0",
+    "luxon": "^1.28.0",
     "merkletreejs": "^0.2.18",
     "minimist": "^1.2.5",
     "mkdirp": "^0.5.5",
