--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -86,6 +86,7 @@
     "minimist": "^1.2.5",
     "mkdirp": "^0.5.5",
     "module-alias": "^2.2.2",
+    "nearest-date": "^1.0.1",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
     "prompt": "^1.1.0",
