--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -57,7 +57,7 @@
     "@uniswap/sdk-core": "^3.0.0",
     "@uniswap/v3-core": "^1.0.0",
     "@uniswap/v3-sdk": "^3.2.1",
-    "arb-ts": "0.0.31",
+    "arb-ts": "^0.0.39",
     "async-mutex": "^0.3.1",
     "autobind-decorator": "^2.4.0",
     "aws-sdk": "^2.937.0",
