--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ lerna-debug.log
 # Local Netlify folder
 .netlify
 
-packages/db_data
+db_data
+
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
