--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "root",
   "private": true,
+  "engines": {
+    "node": "^14",
+    "yarn": "^1.22.11"
+  },
   "devDependencies": {
     "lerna": "^3.20.2"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
