--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,10 @@
   "description": "Hop Protocol networks config",
   "main": "index.js",
   "types": "index.d.ts",
+  "engines": {
+    "node": "^14",
+    "yarn": "^1.22.11"
+  },
   "scripts": {
     "test": "jest test",
     "dev": "npm run version && tsc --watch",
