--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1-beta.2",
   "description": "The Hop Node for Hop Protocol",
   "main": "dist/index.js",
+  "engines": {
+    "node": "^14",
+    "yarn": "^1.22.11"
+  },
   "scripts": {
     "test": "jest test",
     "bonder": "npm run build && node bin/hop-node bonder",
