--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -4,6 +4,10 @@
   "description": "The Hop Protocol JavaScript SDK",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "engines": {
+    "node": "^14",
+    "yarn": "^1.22.11"
+  },
   "scripts": {
     "test": "jest test",
     "dev": "npm run version && tsc --watch",
