add eslint and prettier rules

--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -28,6 +28,8 @@
     "no-use-before-define": 0,
     "no-unused-vars": 0,
     "spaced-comment": 0,
+    "space-before-function-paren": 0,
+    "quotes": 0,
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
     "node/handle-callback-err": 0,
