--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -49,6 +49,7 @@
     "@types/luxon": "^1.26.5",
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
+    "@types/pify": "^5.0.1",
     "@types/prompt": "^1.1.0",
     "@types/rimraf": "^3.0.0",
     "@types/subleveldown": "^4.1.0",
@@ -89,6 +90,7 @@
     "nearest-date": "^1.0.1",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
+    "pify": "^5.0.0",
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
     "subleveldown": "^5.0.1",
