--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -19,6 +19,9 @@
   "plugins": ["react", "@typescript-eslint"],
   "ignorePatterns": [],
   "rules": {
+    "padded-blocks": 0,
+    "no-multiple-empty-lines": 0,
+    "no-unreachable": 0,
     "indent": 0,
     "comma-dangle": 0,
     "no-constant-condition": 0,
@@ -28,6 +31,8 @@
     "no-use-before-define": 0,
     "no-unused-vars": 0,
     "spaced-comment": 0,
+    "space-before-function-paren": 0,
+    "quotes": 0,
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
     "node/handle-callback-err": 0,
