update lerna config:
- use yarn to install packages via lerna
- add bootstrapping npm scripts
- update readme quickstart docs

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "devDependencies": {
     "lerna": "^3.20.2"
   },
+  "scripts": {
+    "bootstrap": "npx lerna bootstrap",
+    "nuke": "npx lerna clean"
+  },
   "dependencies": {}
 }
