--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -32,6 +32,7 @@
     "dotenv": "8.2.0",
     "fast-memoize": "^2.5.2",
     "gridplus-sdk": "0.6.1",
+    "lodash": "^4.17.21",
     "luxon": "1.25.0",
     "numbro": "^2.3.2",
     "qs": "^6.10.1",
@@ -93,14 +94,14 @@
   },
   "devDependencies": {
     "@aws-sdk/client-route-53": "3.4.1",
-    "@types/styled-components": "^5.1.14",
-    "@types/styled-system": "^5.1.13",
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
     "@storybook/node-logger": "^6.3.8",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
+    "@types/styled-components": "^5.1.14",
+    "@types/styled-system": "^5.1.13",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.15.0",
