--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,12 +37,12 @@ jobs:
           name: Push Hop Node Docker image to Docker Hub
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PASS
-            export BRANCH=$(echo $CIRCLE_BRANCH | sed 's/\//-/g')
+            export BRANCH=$(echo $CIRCLE_BRANCH | sed 's/\//-/g' | sed 's/-bonder//g')
             docker tag app $DOCKER_IMAGE:$CIRCLE_SHA1
             docker tag app $DOCKER_IMAGE:$BRANCH
             docker push $DOCKER_IMAGE:$CIRCLE_SHA1
             docker push $DOCKER_IMAGE:$BRANCH
-            test $BRANCH == "mainnet-bonder" && docker tag app $DOCKER_IMAGE:latest && docker push $DOCKER_IMAGE:latest; true
+            test $BRANCH == "production" && docker tag app $DOCKER_IMAGE:latest && docker push $DOCKER_IMAGE:latest; true
       - slack/notify:
           event: fail
           template: basic_fail_1
@@ -57,12 +57,11 @@ workflows:
           filters:
             branches:
               only:
-                - production
-                - staging
-                - mainnet
+                - production-bonder
                 - mainnet-bonder
-                - ropsten
-                - rinkeby
-                - kovan
-                - goerli
+                - staging-bonder
+                - develop-bonder
+                - goerli-bonder
+                - kovan-bonder
+                - rinkeby-bonder
               ignore: /.*/
