--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "types": "index.d.ts",
   "engines": {
-    "node": "^14",
+    "node": ">=14",
     "yarn": "^1.22.11"
   },
   "scripts": {
