hop-node: Add OsWatcher to log cpu/memory usage

--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -54,6 +54,7 @@
     "@types/luxon": "^1.26.5",
     "@types/mkdirp": "^1.0.1",
     "@types/node-fetch": "^2.5.10",
+    "@types/pidusage": "^2.0.1",
     "@types/pify": "^5.0.1",
     "@types/prompt": "^1.1.0",
     "@types/rimraf": "^3.0.0",
@@ -94,6 +95,7 @@
     "nearest-date": "^1.0.1",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
+    "pidusage": "^2.0.21",
     "pify": "^5.0.0",
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
