eslint standard-with-typescript

--- a/packages/hop-node/tsconfig.json
+++ b/packages/hop-node/tsconfig.json
@@ -9,6 +9,7 @@
     "target": "ES2017",
     "noImplicitAny": true,
     "noUnusedLocals": false,
+    "strictNullChecks": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "sourceMap": false,
