--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -97,6 +97,7 @@
     "p-throttle": "4.0.0",
     "pidusage": "^2.0.21",
     "pify": "^5.0.0",
+    "prom-client": "^14.0.0",
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
     "subleveldown": "^6.0.1",
@@ -105,12 +106,14 @@
     "web3-utils": "^1.3.4"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/jest": "^26.0.20",
     "@types/level": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
@@ -120,7 +123,7 @@
     "jest": "^26.6.3",
     "lerna-sync-version": "0.0.6",
     "ts-jest": "^26.5.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.0-beta"
   },
   "_moduleAliases": {
     "src": "src"
