--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hop-protocol/core",
-  "version": "0.0.1-beta.34",
+  "version": "0.0.1-beta.39",
   "description": "Hop Protocol networks config",
   "main": "index.js",
   "types": "index.d.ts",
@@ -11,9 +11,10 @@
   "scripts": {
     "test": "jest test",
     "dev": "npm run version && tsc --watch",
-    "build": "npm run version && npm run build:ts",
+    "build": "npm run version && npm run build:typechain && npm run build:ts",
     "build:ts": "tsc",
-    "clean": "rimraf dist abi addresses metadata networks version.js index.js",
+    "build:typechain": "typechain --target=ethers-v5 --out-dir=./src/contracts ./src/abi/**/*.json && sh ./scripts/ts-nocheck.sh",
+    "clean": "rimraf dist abi addresses contracts metadata networks version.js index.js",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
     "version:bump": "npm version prerelease --preid=beta",
     "lint": "prettier-standard --format",
@@ -27,13 +28,15 @@
     "release": "npm run clean && npm test && npm run publish:latest",
     "bump-release": "npm run version:bump && npm run lerna:sync && npm run release",
     "prepare": "npm run lint && npm run build",
-    "json:mainnet": "node -e \"console.log(JSON.stringify(require('./addresses').mainnet, null, 2))\" > build/addresses/mainnet.json"
+    "json:mainnet": "node -e \"console.log(JSON.stringify(require('./addresses').mainnet, null, 2))\" > build/addresses/mainnet.json",
+    "postinstall": "npm run build:typechain"
   },
   "directories": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "ethers": "^5.4.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -44,6 +47,7 @@
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/runtime": "^7.7.2",
+    "@typechain/ethers-v5": "^7.2.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.11.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -60,6 +64,7 @@
     "standard": "^12.0.1",
     "ts-jest": "^26.5.4",
     "tsify": "^4.0.1",
+    "typechain": "^5.2.0",
     "typescript": "^4.2.3",
     "uglify-es": "^3.3.9"
   },
