--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -79,6 +79,7 @@
     "ethereumjs-util": "^7.0.9",
     "ethers": "5.4.5",
     "expect": "^26.6.2",
+    "express": "^4.17.1",
     "fast-memoize": "^2.5.2",
     "js-yaml": "^4.1.0",
     "keythereum": "1.2.0",
@@ -106,6 +107,8 @@
     "web3-utils": "^1.3.4"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.20",
     "@types/level": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
