--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -11,9 +11,10 @@
     "test": "jest test",
     "bonder": "npm run build && node bin/hop-node bonder",
     "arb-bot": "npm run build && node bin/hop-node arb-bot",
-    "start": "node .",
-    "dev": "tsc --watch",
-    "build": "tsc",
+    "start": "npm run build-info && node bin/hop-node",
+    "dev": "npm run build-info && tsc --watch",
+    "build-info": "echo \"{\\\"rev\\\": \\\"${GIT_REV:-`git rev-parse --short HEAD`}\\\"}\" > src/.build-info.json",
+    "build": "npm run build-info && tsc",
     "lint": "eslint --fix \"src/**/*\" \"test/**/*\"",
     "clean": "rm -rf dist",
     "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
