type fixes & lint

--- a/packages/hop-node/.eslintrc.json
+++ b/packages/hop-node/.eslintrc.json
@@ -37,6 +37,8 @@
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "@typescript-eslint/no-misused-promises": 0,
-    "@typescript-eslint/no-dynamic-delete": 0
+    "@typescript-eslint/no-dynamic-delete": 0,
+    "@typescript-eslint/return-await": 0,
+    "@typescript-eslint/consistent-type-definitions": 0
   }
 }
