sdk: Use eslint

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf dist",
     "clean:docs": "rimraf docs",
     "version": "echo \"export default '$(cat package.json | jq -r '.version')'\" > src/version.ts",
-    "lint": "prettier-standard --format",
+    "lint": "eslint --fix \"src/**/*\" \"test/**/*\"",
     "version:bump": "npm version prerelease --preid=beta",
     "publish:latest": "npm publish --tag latest --access public",
     "publish:beta": "npm publish --tag beta --access public",
@@ -63,8 +63,16 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^12.11.7",
     "@types/node-fetch": "2.5.10",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-unused-imports": "^1.1.2",
     "aliasify": "^2.1.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
@@ -72,7 +80,6 @@
     "ethers": "^5.4.7",
     "jest": "^26.6.3",
     "lerna-sync-version": "0.0.6",
-    "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
     "standard": "^12.0.1",
     "ts-jest": "^26.5.4",
