--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitAny": false,
     "noUnusedLocals": false,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "baseUrl": "."
   },
   "include": ["src"]
