--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -31,6 +31,7 @@
     "import/no-unresolved": 0,
     "no-use-before-define": 0,
     "no-trailing-spaces": 0,
+    "no-multi-spaces": 0,
     "no-unused-vars": 0,
     "spaced-comment": 0,
     "space-before-function-paren": 0,
