hop-node: Remove unused db classes

--- a/packages/hop-node/tsconfig.json
+++ b/packages/hop-node/tsconfig.json
@@ -19,7 +19,8 @@
       "*": ["node_modules/*", "src/types/*"],
       "src/*": ["*"]
     },
-    "typeRoots": ["./node_modules/@types", "./@types"]
+    "typeRoots": ["./node_modules/@types", "./@types"],
+    "lib": ["ESNext"]
   },
   "include": ["src/**/*", "test/*"]
 }
