hop-node/sdk: Individual abi imports to reduce build size

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -27,6 +27,6 @@
     "typeRoots": ["node", "./node_modules/@types", "./@types"],
     "downlevelIteration": true
   },
-  "include": ["src/*"],
+  "include": ["src/*", "src/abi/*"],
   "exclude": ["node_modules", "dist", "test", "**/*.test.ts"]
 }
