hop-node: Optimize Docker image size

--- a/packages/hop-node/Dockerfile
+++ b/packages/hop-node/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14
+FROM node:14 AS build
 
 ARG GIT_REV
 ENV GIT_REV=${GIT_REV}
@@ -7,14 +7,17 @@ ENV GIT_REV=${GIT_REV}
 RUN mkdir -p /usr/src/app/node_modules && chown -R node:node /usr/src/app
 
 WORKDIR /usr/src/app
-
 USER node
-
-COPY --chown=node:node package*.json ./
+COPY --chown=node:node *.json ./
 COPY --chown=node:node . .
-
 RUN npm install
 RUN npm run build
 
-ENTRYPOINT [ "./bin/hop-node" ]
+FROM node:14-alpine
+WORKDIR /usr/src/app
+COPY --from=build /usr/src/app/node_modules /usr/src/app/node_modules
+COPY --from=build /usr/src/app/dist /usr/src/app/dist
+COPY --from=build /usr/src/app/bin /usr/src/app/bin
+COPY --from=build /usr/src/app/*.json /usr/src/app/
+ENTRYPOINT [ "/usr/src/app/bin/hop-node" ]
 CMD []
