UI: netlify config (#296)
* configure netlify.toml, cleanup exports

* block some countries

--- a/packages/frontend/netlify.toml
+++ b/packages/frontend/netlify.toml
@@ -12,3 +12,16 @@
     X-Content-Type-Options = "nosniff"
     Strict-Transport-Security = "max-age=15780000; includeSubDomains; preload"
     Feature-Policy = "geolocation 'none'; midi 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; fullscreen 'none'; payment 'none'"
+
+[build]
+  base    = "packages/frontend/"
+  command = "yarn build"
+  publish = "build/"
+
+[[redirects]]
+  from = "/*"
+  to = "/451.html"
+  status = 451
+  force = true
+  conditions = {Country=["BI","BY","CD","CF","CI","CU","IR","KP","LB","LR","LY","MM","RU","SD","SO","SS","SY","VE","YE","ZW"]}
+  headers = {Link = "<https://app.hop.exchange>"}
