hop-node: Use rimraf for cleaning dist files

--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -18,9 +18,9 @@
     "postinstall": "mkdir -p dist/src && npm run build-info && cp src/.build-info.json dist/src/.build-info.json",
     "build": "npm run build-info && tsc -p tsconfig.build.json",
     "lint": "eslint --fix \"src/**/*\" \"test/**/*\"",
-    "clean": "rm -rf dist",
-    "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
-    "clean:db": "rm -rf db_data",
+    "clean": "rimraf dist",
+    "clean:arbitrum": "rimraf l2_nodes/arbitrum/data",
+    "clean:db": "rimraf db_data",
     "lerna:sync": "lerna-sync-version",
     "version:bump": "npm version prerelease --preid=beta",
     "publish:latest": "npm publish --tag latest --access public",
